[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.6", features = ["derive"] }
derive_more = "0.99.17"
duration-string = { version = "0.4.0", features = ["serde"] }
futures = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.3.1"
hyper-util = { version = "0.1.5", features = ["full"] }
itertools = "0.13.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive", "std"] }
serde_regex = "1.1.0"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.1"
